--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.; Database=MoneyFellows;TrustServerCertificate=true;Trusted_Connection=False;MultipleActiveResultSets=true; Integrated Security=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
