Adding(Accounts Registration for Admin and User with Jwt and Login Method )

--- a/MoneyFellows.Api/appsettings.Development.json
+++ b/MoneyFellows.Api/appsettings.Development.json
@@ -8,5 +8,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "Jwt": {
+    "Key": "MoneyFellowsSecretKeyHere",
+    "Issuer": "MoneyFellowsIssuer",
+    "Audience": "MoneyFellowsAudience",
+    "ExpiresInMinutes": 60
   }
+
 }
